@@ -78,6 +78,7 @@ require "$opt_libdir/HLstats.plib";
 require "$opt_libdir/HLstats_EventHandlers.plib";
 require "$opt_libdir/HLstats_RatingSystem.pm";
 require "$opt_libdir/geoip/PurePerl.pm";
+require "$opt_libdir/HLStats_ServerQueries.pm";
 
 $|=1;
 Getopt::Long::Configure ("bundling");
