@@ -289,8 +289,6 @@ Enter the addresses of all servers that you want to accept data from = Geben Sie
 HLStats can use Rcon to give feedback to users when they = HLStats kann das Rcon Passwort verwenden wenn die Spieler
 update their profile = Ihr Profil aktualisieren
 if you enable Rcon support in hlstats.conf and specify an Rcon Password for each server = wenn Sie die Rcon Unterstützung aktivieren und das Rcon Passwort für den Server angeben
-The Default map is used to sepecify the map if HLStats is unable to determine the map = Die Standard Map dient HLStats dazu eine Map anzuzeigen wenn es nicht möglich ist die Map auszulesen
-Even if HLStats is stated befor the server it could happen that the map name is not in the log = Selbst wenn HLStats vor der Gameserver gestartet wird, kann es sein, dass die Map nicht in der Log auftaucht
 Go to = Gehe zu
 Basic View = Normale Ansicht
 Advanced View = Erweiterte Ansicht
